# nihility

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose-build.yml  docker-compose.yml
.github/workflows/: docker-image.yml
clients/edge-zectrix/: .gitignore  Cargo.toml  index.html
clients/edge-zectrix/.cargo/: config.toml
clients/edge-zectrix/src/: audio.rs  display.rs  input.rs  lib.rs  net.rs  storage.rs  work.rs
clients/edge-zectrix/src/audio/: es8311.rs
clients/edge-zectrix/src/audio/es8311/: config.rs  error.rs  reg.rs
clients/edge-zectrix/src/display/: epd.rs  epd_trait.rs  ssd1683.rs
clients/edge-zectrix/src/display/epd/: ssd1683.rs  ssd2683.rs
clients/edge-zectrix/src/display/epd/ssd1683/: command.rs  display.rs
clients/edge-zectrix/src/display/epd/ssd2683/: command.rs  display.rs
clients/edge-zectrix/src/display/ssd1683/: command.rs  display.rs  interface.rs
clients/edge-zectrix/src/net/: mdns.rs  wifi.rs
clients/edge-zectrix/src/work/: config_server.rs  ws_client.rs  ws_server.rs
common/: Cargo.toml
common/src/: config.rs  context.rs  idea.rs  input.rs  inspiration.rs  intention.rs  lib.rs  model.rs  output.rs
crates/config/: Cargo.toml
crates/config/src/: error.rs  lib.rs
crates/config/tests/: get_config.rs  set_config.rs
crates/edge-protocol/: Cargo.toml
crates/edge-protocol/src/: audio.rs  device_info.rs  key.rs  lib.rs  message.rs  screen.rs
crates/log/: Cargo.toml
crates/log/src/: error.rs  lib.rs
crates/log/tests/: file_log.rs
crates/module/: Cargo.toml
crates/module-audio/: Cargo.toml
crates/module-audio/src/: error.rs  func.rs  lib.rs  vad.rs  vad_stream.rs
crates/module-audio/src/func/: merge_channels.rs  pcm_to_wav.rs  resample.rs
crates/module-audio/src/vad/: silero.rs
crates/module-browser-control/: Cargo.toml
crates/module-browser-control/src/: error.rs  func.rs  lib.rs
crates/module-browser-control/src/func/: close_page.rs  open_page.rs  press_key.rs  refresh_page.rs  screenshot.rs
crates/module-browser-control/tests/: screenshot.rs
crates/module-edge-device-control/: Cargo.toml
crates/module-edge-device-control/src/: device.rs  error.rs  func.rs  lib.rs
crates/module-edge-device-control/src/device/: connect_ws.rs  register.rs  screen_processor.rs  task.rs
crates/module-edge-device-control/src/device/task/: audio_handle.rs  audio_handler.rs  key_handle.rs  message_handle.rs  message_handler.rs  screen_refresh.rs
crates/module-edge-device-control/src/func/: connect_device.rs  list_devices.rs
crates/module-edge-device-control/src/utils/: discovery.rs
crates/module-manager/: Cargo.toml
crates/module-manager/src/: error.rs  lib.rs
crates/module-manager/tests/: browser_control.rs
crates/module-message-pool/: Cargo.toml
crates/module-message-pool/src/: analysis.rs  error.rs  func.rs  lib.rs
crates/module-message-pool/src/analysis/: command_analysis.rs  intent_recognition.rs
crates/module-message-pool/src/func/: add_message.rs  get_scene_info.rs  process_messages.rs
crates/module-model/: Cargo.toml
crates/module-model/src/: config.rs  error.rs  func.rs  lib.rs  pool.rs  provider.rs  utils.rs
crates/module-model/src/func/: adjust_weight.rs  image_understanding.rs  speech_recognition.rs  text_completion.rs
crates/module-model/src/provider/: openai.rs  openai_api.rs  sense_voice.rs
crates/module-model/src/utils/: cmvn.rs  fbank.rs  lfr.rs
crates/module-scene/: Cargo.toml
crates/module-scene-manager/: Cargo.toml
crates/module-scene/src/: error.rs  func.rs  lib.rs
crates/module-scene/src/func/: create_scene.rs  delete_scene.rs  get_scene.rs  list_scenes.rs  update_scene.rs
crates/module/src/: lib.rs
crates/secret/: Cargo.toml
crates/server-entity/: Cargo.toml
crates/server-entity/src/: html_pages.rs  lib.rs  message.rs  module_config.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
crates/server-migration/: Cargo.toml  README.md
crates/server-migration/html/: test.html
crates/server-migration/src/: lib.rs  m20260306_121657_html_pages.rs  m20260309_104447_user.rs
crates/store-entity/: Cargo.toml
crates/store-migration/: Cargo.toml  README.md
crates/store-migration/src/: lib.rs  m20260306_121657_html_pages.rs  m20260309_104447_user.rs  m20260330_000001_module_config.rs  m20260408_000001_message_pool.rs  m20260415_112507_add_message_group_id.rs  m20260416_123542_base_scene.rs
crates/store-operate/: Cargo.toml
crates/store-operate/src/: error.rs  html_page.rs  lib.rs  message.rs  module_config.rs  scene.rs  user.rs
crates/util-init/: Cargo.toml  README.md
crates/util-init/src/: chromium_install.rs  deps_install.rs  error.rs  lib.rs  model_install.rs
crates/util-init/tests/: init.rs
crates/util-secret/: Cargo.toml
crates/util-vad/: Cargo.toml
crates/util-vad/src/: error.rs  lib.rs  silero.rs
frontend/: README.md  package.json  vite.config.ts
frontend/src/: main.ts
locales/: zhs.toml
plugins/nihility-config/: Cargo.toml
plugins/nihility-config/src/: lib.rs
plugins/nihility-input-chat/: Cargo.toml
plugins/nihility-input-chat-bot/: Cargo.toml
plugins/nihility-input-chat/locales/: zhs.toml
plugins/nihility-input-chat/src/: handle_api_resp_builder.rs  handle_message.rs  handle_meta.rs  handle_notice.rs  handle_request.rs  lib.rs
plugins/nihility-log/: Cargo.toml
plugins/nihility-log/src/: lib.rs
plugins/nihility-memory-simple/: Cargo.toml
plugins/nihility-memory-simple/src/: embedding.rs  graph.rs  lib.rs  openie.rs  retrieval.rs
plugins/nihility-model-api/: Cargo.toml
plugins/nihility-model-api/src/: lib.rs
plugins/nihility-model-api/tests/: image.rs
server/: Cargo.toml  build.rs
server/src/: error.rs  lib.rs  router.rs  service.rs
server/src/router/: embed_assets.rs  html_page.rs  html_page_manager.rs  jwt.rs  module_config.rs  module_manager.rs  test.rs  ws.rs
server/src/service/: html_page.rs  module_config.rs  user.rs
src/: config.rs  lib.rs  log.rs  main.rs  server.rs
src/core/: extract_information.rs  intention_recognition.rs  mod.rs  think.rs
(+35 files in other folders)
