[package]
name = "nihility"
version = "0.1.0"
edition = "2024"

[features]
default = ["chat-bot", "simple-memory", "api-model"]
chat-bot = ["nihility-input-chat"]
simple-memory = ["nihility-memory-simple"]
api-model = ["nihility-model-api"]

[dependencies]
nihility-common = { workspace = true }
nihility-config = { workspace = true }
nihility-log = { workspace = true }

nihility-input-chat = { path = "plugins/nihility-input-chat", version = "0.1.0", optional = true }
nihility-memory-simple = { path = "plugins/nihility-memory-simple", version = "0.1.0", optional = true }
nihility-model-api = { path = "plugins/nihility-model-api", version = "0.1.0", optional = true }

tokio = { workspace = true, features = ["macros"] }
anyhow = { workspace = true }
tracing = { workspace = true }
rust-i18n = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }

[workspace.dependencies]
nihility-common = { path = "common", version = "0.1.0" }
nihility-config = { path = "plugins/nihility-config", version = "0.1.0" }
nihility-log = { path = "plugins/nihility-log", version = "0.1.0" }

tokio = { version = "1.44", default-features = false, features = ["sync", "rt", "rt-multi-thread", "tracing"] }
anyhow = { version = "1", default-features = false }
tracing = { version = "0.1" }
uuid = { version = "1.7", default-features = false, features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
lazy_static = { version = "1", default-features = false }
async-trait = { version = "0.1" }
rust-i18n = { version = "3.1" }

[workspace]
members = ["common", "plugins/*"]
