[package]
name = "nihility"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[workspace]
members = ["server", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["nihilityer <nihilityer@mail.nihilityer.top>"]
readme = "README.md"
keywords = ["nihility", "ContextEngineering", "assistant"]
license = "MIT"
repository = "https://github.com/nihilityer/nihility"
homepage = "https://github.com/nihilityer/nihility"
publish = false

[workspace.dependencies]
nihility-config = { path = "crates/config" }
nihility-log = { path = "crates/log" }
nihility-module = { path = "crates/module" }
nihility-module-browser-control = { path = "crates/module-browser-control" }
nihility-module-edge-device-control = { path = "crates/module-edge-device-control" }
nihility-module-manager = { path = "crates/module-manager" }
nihility-edge-protocol = { path = "crates/edge-protocol" }
nihility-secret = { path = "crates/secret" }
nihility-server = { path = "server" }
nihility-server-entity = { path = "crates/server-entity" }
nihility-server-migration = { path = "crates/server-migration" }

http = { version = "1.4" }
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
rand = { version = "0.10" }
argon2 = { version = "0.5" }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
password-hash = { version = "0.5", features = ["getrandom"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["local-time", "ansi", "fmt", "std"] }
tracing-appender = { version = "0.2" }
uuid = { version = "1.22", default-features = false, features = ["v4"] }
chrono = { version = "0.4" }
time = { version = "0.3", default-features = false, features = ["parsing"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
schemars = { version = "1.2", default-features = false, features = ["derive"] }
toml = { version = "1.0", default-features = false, features = ["display", "parse", "serde"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
futures = { version = "0.3" }
async-trait = { version = "0.1" }
rust-embed = { version = "8.11" }
mime_guess = { version = "2.0" }
image = { version = "0.25" }
chromiumoxide = { version = "0.9" }
thiserror = { version = "2.0" }
anyhow = { version = "1.0" }
mdns-sd = { version = "0.18" }
tokio-tungstenite = { version = "0.28" }
rkyv = { version = "0.8", features = ["bytecheck"] }

sea-orm = { version = "~2.0.0-rc.36", features = ["macros", "serde_json", "with-json", "with-uuid", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "~2.0.0-rc.36" }

[[bin]]
name = "nihility-server"
path = "src/server.rs"

[features]
default = ["sqlite"]
sqlite = ["nihility-server/sqlite"]
postgres = ["nihility-server/postgres"]

[dependencies]
tokio = { workspace = true }
nihility-log = { workspace = true }
nihility-config = { workspace = true }
nihility-server = { workspace = true }