[package]
name = "nihility-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["sqlite"]
sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres"]

[dependencies]
http = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
thiserror = { workspace = true }
sea-orm = { workspace = true }
uuid = { workspace = true }

nihility-config = { workspace = true }
nihility-secret = { workspace = true }
nihility-server-entity = { workspace = true }
nihility-server-migration = { workspace = true }
nihility-module-manager = { workspace = true }