[package]
edition = "2024"
name = "nihility-edge-zectrix"
rust-version = "1.85"
version = "0.1.0"

[[bin]]
name = "edge-zectrix"
path = "./src/bin/main.rs"
test = false
bench = false

[lib]
test = false
bench = false

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "log-04", "unstable", "psram"] }

esp-rtos = { version = "0.2.0", features = [
    "embassy",
    "esp-alloc",
    "esp-radio",
    "esp32s3",
    "log-04",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
esp-alloc = { version = "0.9", features = ["esp32s3", "nightly"] }
esp-storage = { version = "0.8", features = ["esp32s3"] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
esp-backtrace = { version = "0.18.1", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-radio = { version = "0.17.0", features = [
    "esp-alloc",
    "esp32s3",
    "log-04",
    "smoltcp",
    "unstable",
    "wifi",
] }

embassy-net = { version = "0.8", features = [
    "dhcpv4",
    "log",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embassy-sync = { version = "0.7" }
embassy-futures = { version = "0.1" }
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }

embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
embedded-storage = { version = "0.3" }

smoltcp = { version = "0.12.0", default-features = false, features = [
    "log",
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }

log = "0.4.27"
rkyv = { version = "0.8", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
critical-section = "1.2.0"
anyhow = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

edge-dhcp = { version = "0.7" }
edge-http = { version = "0.7" }
edge-ws = { version = "0.7" }
edge-mdns = { version = "0.7" }
edge-nal = { version = "0.6" }
edge-nal-embassy = { version = "0.8" }

nihility-edge-protocol = { path = "../../crates/edge-protocol" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
