[package]
name = "nihility-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[features]
default = ["toml_config", "json_config"]
toml_config = ["toml"]
json_config = ["serde_json"]

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

toml = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }