[package]
name = "nihility-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[features]
default = ["toml_config", "json_config", "db"]
toml_config = ["toml"]
json_config = ["serde_json"]
db = ["sea-orm", "schemars", "chrono", "uuid", "nihility-server-entity"]

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

toml = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

sea-orm = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
nihility-server-entity = { workspace = true, optional = true }