[package]
name = "nihility-edge-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
