[package]
name = "nihility-module-audio"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
nihility-config = { workspace = true }
nihility-module = { workspace = true }

tracing = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

hound = { workspace = true }
rubato = "0.15"

[dev-dependencies]
nihility-log = { workspace = true }