[package]
name = "nihility-module-browser-control"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
nihility-log = { workspace = true }
nihility-config = { workspace = true }
nihility-module = { workspace = true }

uuid = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

chromiumoxide = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
image = { workspace = true }