[package]
name = "nihility-module-edge-device-control"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
nihility-config = { workspace = true }
nihility-edge-protocol = { workspace = true }
nihility-module = { workspace = true }
nihility-module-browser-control = { workspace = true }

uuid = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
mdns-sd = { workspace = true }
tokio-tungstenite = { workspace = true }
image = { workspace = true }
rkyv = { workspace = true }