[package]
name = "nihility-module-message-pool"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
nihility-config = { workspace = true }
nihility-module = { workspace = true }
nihility-server-entity = { workspace = true }

uuid = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
async-recursion = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

tokio = { workspace = true }
sea-orm = { workspace = true }
