[package]
name = "nihility-module-model"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
nihility-config = { workspace = true }
nihility-module = { workspace = true }

async-openai = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
hound = { workspace = true }
ort = { workspace = true }
realfft = { workspace = true }
ndarray = { workspace = true }
ndarray-npy = { workspace = true }
tokenizers = { workspace = true }
num-complex = { workspace = true }