[package]
name = "nihility-server-migration"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
uuid = { workspace = true }
sea-orm-migration = { workspace = true }

nihility-server-entity = { workspace = true }
