[package]
name = "nihility-store-migration"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
uuid = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
tracing = { workspace = true }
sea-orm-migration = { workspace = true }

nihility-util-secret = { workspace = true }
nihility-store-entity = { workspace = true }
