[package]
name = "nihility-config"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { version = "0.15", default-features = false, features = ["json", "toml", "yaml"] }

nihility-common = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }