[package]
name = "nihility-input-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
onebot_v11 = { version = "0.1", default-features = false }
serde_json = { version = "1.0", default-features = false }
reqwest = { version = "0.12", features = ["json"] }
base64 = { version = "0.22" }

nihility-common = { workspace = true }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
lazy_static = { workspace = true }