[package]
name = "nihility-log"
version = "0.1.0"
edition = "2024"

[dependencies]
nihility-common = { workspace = true }

tracing-subscriber = { version = "0.3", features = ["local-time", "ansi", "fmt", "std"] }
tracing-appender = { version = "0.2" }
time = { version = "0.3", default-features = false, features = ["parsing"] }

anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
