[package]
name = "nihility-memory-simple"
version = "0.1.0"
edition = "2024"

[dependencies]
petgraph = { version = "0.7", default-features = false, features = ["stable_graph"] }
serde_json = { version = "1.0", default-features = false }

nihility-common = { workspace = true }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
lazy_static = { workspace = true }