[package]
name = "nihility-memory-simple"
version = "0.1.0"
edition = "2024"

[dependencies]
petgraph = { version = "0.7", default-features = false, features = ["stable_graph"] }

nihility-common = { workspace = true }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }