[package]
name = "nihility-model-api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = { version = "0.28" }

nihility-common = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }